# DDEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: cmake-single-platform.yml
.kdev4/: GameEngine.kdev4
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/.cmake/api/v1/reply/: codemodel-v2-72a0572069bec02896ce.json  index-2023-04-24T19-34-55-0034.json  target-dropengine-Debug-cbe8a03f9e22f8d2b0a7.json  target-sandbox-Debug-0c37c9d2e94a254cb13b.json
engine/: Camera.h  Display.cpp  Display.h  Display.hpp  GLPane.hpp  GameObject.cpp  GameObject.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  Vector3.cpp  Vector3.h  dropengine.h  engine.cpp  engine.h  obj_loader.cpp  obj_loader.h  toxengine.h
engine/event/: coreEvent.h  keyEvent.h
engine/imgui-1.82/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
game/: Sandbox.cpp
res/shaders/: basicShader.frag  basicShader.vert
